Fix an export of toggle card, improve menu alignment

--- a/projects/sparkle-ui/styles/components/sparkle-menu.component.scss
+++ b/projects/sparkle-ui/styles/components/sparkle-menu.component.scss
@@ -65,6 +65,7 @@ $spkMenu: true !default;
         display: flex;
         justify-content: flex-start;
         align-items: center;
+        text-align: left;
         min-height: p2r(32);
         margin: p2r(0 8);
         padding: p2r(0 8);
